--- a/services/gallery/api/Dockerfile
+++ b/services/gallery/api/Dockerfile
@@ -2,7 +2,7 @@ FROM node:12
 
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
-WORKDIR '/home/node/app'
+WORKDIR /home/node/app
 COPY package*.json .
 RUN npm install
 
@@ -14,4 +14,4 @@ ENV PORT 3001
 EXPOSE 5000
 EXPOSE $PORT
 
-CMD ['npm', 'run', 'start']
+CMD ["npm", "run", "start"]
