--- a/services/gallery/api/Dockerfile.dev
+++ b/services/gallery/api/Dockerfile.dev
@@ -2,9 +2,10 @@ FROM node:12
 
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
-WORKDIR '/home/node/app'
+WORKDIR /home/node/app
 
 COPY package*.json .
+
 RUN npm install
 
 USER node
@@ -13,4 +14,4 @@ COPY --chown=node:node . .
 
 EXPOSE 5000
 
-CMD ['npm', 'run', 'start']
+CMD ["npm", "run", "start"]
