--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,55 +2,44 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "(1) docker prune all",
-      "type": "shell",
-      "detail": "cleans workspace objects",
-      "command": "source ${workspaceFolder}/utilities/docker/clean.sh",
+      "label": "docker start fresh run all",
+      "detail": "clean and restart",
+      "dependsOrder": "sequence",
+      "dependsOn": ["docker purge system", "docker build all images", "docker lift all containers"],
+      "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
-      "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
     {
-      "label": "(2) docker build images",
+      "label": "docker purge system",
       "type": "shell",
-      "detail": "builds and tags all docker images",
-      "command": "cd ${workspaceFolder}/utilities/docker && source build.sh",
+      "detail": "cleans system",
+      "command": "source ${workspaceFolder}/utilities/docker/purge.sh",
+      "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
-      "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
     {
-      "label": "(3) docker lift containers",
+      "label": "docker build all images",
       "type": "shell",
-      "detail": "lift and detach all docker-compose containers",
-      "command": "cd ${workspaceFolder}/utilities/docker && source lift.sh",
+      "detail": "builds image from Dockerfile",
+      "command": "source ${workspaceFolder}/utilities/docker/build.sh",
       "problemMatcher": [],
-      "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
+      "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
     },
     {
-      "label": "(4) docker push images",
+      "label": "docker lift all containers",
       "type": "shell",
-      "detail": "pushes images to docker hub",
-      "command": "cd ${workspaceFolder}/utilities/docker && source push.sh",
+      "detail": "lift all containers",
+      "command": "source ${workspaceFolder}/utilities/docker/lift.sh",
+      "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
-      "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
-    // {
-    //   "label": "build image in dir",
-    //   "type": "shell",
-    //   "detail": "builds image from Dockerfile",
-    //   "command": "",
-    //   "dependsOrder": "sequence",
-    //   "problemMatcher": [],
-    //   "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
-    // },
-    // {
-    //   "label": "dir",
-    //   "type": "shell",
-    //   "options": {
-    //     "cwd": "${workspaceFolder}"
-    //   },
-    //   "command": "ls",
-    //   "problemMatcher": [],
-    //   "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
-    // }
+    {
+      "label": "docker push to dockerhub",
+      "type": "shell",
+      "detail": "docker push to dockerhub",
+      "command": "source ${workspaceFolder}/utilities/docker/push.sh",
+      "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
+      "problemMatcher": [],
+    },
   ]
 }
