--- a/gateway/client/Dockerfile
+++ b/gateway/client/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /usr/src/app
 
 COPY package.json .
 
-RUN yarn
+RUN npm install
 
-RUN yarn build
+RUN npm run build
 
-CMD yarn watch
+CMD npm run watch
