--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,56 +2,31 @@ version: "3.8"
 services:
 
   # ==========================================#
-  #  global volumes                           #
-  # ==========================================#
-
-  volumes:
-    nginx_conf:
-    nginx_vhost:
-    nginx_html:
-    nginx_certs:
-    auth_db_vol:
-    users_db_vol:
-    listings_db_vol:
-  
-  # ==========================================#
-  #  global networks                          #
-  # ==========================================#
-  
-  networks:
-    auth_network:
-      driver: bridge
-    default:
-      external:
-        name: sevrices_network
-
-  # ==========================================#
   #  services/nginx                           #
   # ==========================================# 
 
   nginx_proxy:
-    image: nginx
     container_name: nginx_proxy
-    ports:
-      - "80:80"
-      - "443:443"
+    image: nginx
     volumes:
       - nginx_conf:/etc/nginx/conf.d
       - nginx_vhost:/etc/nginx/vhost.d
       - nginx_html:/usr/share/nginx/html
       - nginx_certs:/etc/nginx/certs:ro
+    ports:
+      - "80:80"
+      - "443:443"
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     restart: always
-
+  
   # ==========================================#
   #  services/nginx                           #
   # ==========================================# 
-
+  
   docker_gen:
-    image: jwilder/docker-gen
-    command: -notify-sighup nginx_proxy -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     container_name: docker_gen
+    image: jwilder/docker-gen
     depends_on:
       - nginx_proxy
     volumes:
@@ -60,6 +35,7 @@ services:
       - nginx_certs:/etc/nginx/certs:ro
       - ./services/nginx/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    command: -notify-sighup nginx_proxy -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.docker_gen"
     restart: always
@@ -71,14 +47,14 @@ services:
   letsencrypt:
     container_name: letsencrypt
     image: jrcs/letsencrypt-nginx-proxy-companion
+    depends_on:
+      - nginx_proxy
+      - docker_gen
     volumes:
       - nginx_vhost:/etc/nginx/vhost.d
       - nginx_html:/usr/share/nginx/html
       - nginx_certs:/etc/nginx/certs
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    depends_on:
-      - nginx_proxy
-      - docker_gen
     restart: always
 
   # ==========================================#
@@ -87,193 +63,195 @@ services:
 
   web_client:
     container_name: web_client
-    build: ./gateway/web_client
-    volumes:
-      - ./gateway/web_client:/usr/src/app
+    build: ./gateway/client
+    expose:
+      - "3000"
     environment:
-      - NODE_ENV=production
+      # - NODE_ENV=production
       - VIRTUAL_HOST=seesee.com
+      - VIRTUAL_PORT=3000
       - LETSENCRYPT_HOST=seesee.com
       - LETSENCRYPT_EMAIL=dany@dany.codes
-    ports:
-      - 3000:80
     depends_on:
       - nginx_proxy
       - docker_gen
-      - auth_service
-      - users_service
-      - listings_service
-
-  # ==========================================#
-  #  gateway/passport                         #
-  # ==========================================#
-
-  auth_service:
-    container_name: auth_service
-    image: danydodson/auth_service
-    build:
-      context: .
-      dockerfile: 'Dockerfile'
-    env_file: .develop.env
-    environment:
-      - MONGO_HOSTNAME=auth_data
-      - MONGO_USERNAME=$MONGO_USERNAME
-      - MONGO_PASSWORD=$MONGO_PASSWORD
-      - MONGO_DB=$MONGO_AUTH_DB
-    ports:
-      - '80:5000'
-    depends_on:
-      - auth_data
-    volumes:  
-      - /usr/src/app/node_modules
-      - ./gateway/passport:/usr/src/app
-    networks:
-      - auth_network
-    command: ./wait-for.sh auth_data:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
-
-  # ==========================================#
-  #  gateway/passport                         #
-  # ==========================================#
-
-  auth_data:
-    container_name: auth_data
-    image: mongo:latest
-    env_file: .develop.env
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
-      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
+      - letsencrypt
+      # - auth_service
+      # - users_service
+      # - gallery_service
     volumes:
-      - auth_db_vol:/data/db
-    ports:
-      - '27018:27017'
-    networks:
-      - auth_network
-    restart: unless-stopped
+      - ./gateway/client:/usr/src/app
+
+  # ==========================================#
+  #  gateway/passport                         #
+  # ==========================================#
+
+  # auth_service:
+  #   container_name: auth_service
+  #   image: danydodson/auth_service
+  #   build:
+  #     context: .
+  #     dockerfile: 'Dockerfile'
+  #   env_file: ./gateway/passport/.env
+  #   environment:
+  #     - MONGO_HOSTNAME=auth_data
+  #     - MONGO_USERNAME=$MONGO_USERNAME
+  #     - MONGO_PASSWORD=$MONGO_PASSWORD
+  #     - MONGO_DB=$MONGO_AUTH_DB
+  #   volumes:
+  #     - /usr/src/app/node_modules
+  #     - ./gateway/passport:/usr/src/app
+  #   ports:
+  #     - '80:5000'
+  #   depends_on:
+  #     - auth_data
+  #   command: ./wait-for.sh auth_data:27017 -- /home/node/app/node_modules/.bin/nodemon src/index.js
+
+  # ==========================================#
+  #  gateway/passport                         #
+  # ==========================================#
+
+  # auth_data:
+  #   container_name: auth_data
+  #   image: mongo
+  #   ports:
+  #     - '27018:27018'
+  #   env_file: ./gateway/passport/.env
+  #   environment:
+  #     - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
+  #     - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
+  #   volumes:
+  #     - auth_db_vol:/data/db
+  #   restart: unless-stopped
   
   # ==========================================#
   #  services/users/api                       #
   # ==========================================#
 
-  users_service:
-    container_name: users_service
-    build: ./services/users/api
-    environment:
-      - MONGO_HOSTNAME=users_data
-      - MONGO_USERNAME=$MONGO_USERNAME
-      - MONGO_PASSWORD=$MONGO_PASSWORD
-      - MONGO_DB=$MONGO_USERS_DB
-    volumes: 
-      - /usr/src/app/node_modules
-      - ./services/users/api:/usr/src/app
-    ports:
-      - 7000:7000
-    logging:
-      options:
-        max-size: "4m"
-        max-file: "10"
-    depends_on:
-      - users_data
-    restart: unless-stopped
+  # users_service:
+  #   container_name: users_service
+  #   build: ./services/users/api
+  #   env_file: ./services/users/api/.env
+  #   environment:
+  #     - MONGO_HOSTNAME=users_data
+  #     - MONGO_USERNAME=$MONGO_USERNAME
+  #     - MONGO_PASSWORD=$MONGO_PASSWORD
+  #     - MONGO_DB=$MONGO_USERS_DB
+  #   volumes: 
+  #     - /usr/src/app/node_modules
+  #     - ./services/users/api:/usr/src/app
+  #   ports:
+  #     - 7000:7000
+  #   logging:
+  #     options:
+  #       max-size: "4m"
+  #       max-file: "10"
+  #   depends_on:
+  #     - users_data
+  #   restart: unless-stopped
 
   # ==========================================#
   # services/users/db                         #
   # ==========================================#
 
-  users_data:
-    container_name: users_data
-    image: mongo:latest
-    volumes:
-      - users_db_vol:/data/db
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
-      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
-    ports:
-      - 27107:27107
-    restart: unless-stopped
+  # users_data:
+  #   container_name: users_data
+  #   image: mongo
+  #   ports:
+  #     - 27107:27107
+  #   env_file: ./services/users/api/.env
+  #   environment:
+  #     - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
+  #     - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
+  #   volumes:
+  #     - users_db_vol:/data/db
+  #   restart: unless-stopped
 
   # ==========================================#
-  #  services/listings/api                    #
+  #  services/gallery/api                     #
   # ==========================================#
 
-  listings_service:
-    container_name: listings_service
-    build: ./services/users/api
-    volumes:
-      - /usr/src/app/node_modules
-      - ./services/users/api:/usr/src/app
-    environment:
-      - MONGO_HOSTNAME=listings_data
-      - MONGO_USERNAME=$MONGO_USERNAME
-      - MONGO_PASSWORD=$MONGO_PASSWORD
-      - MONGO_DB=$MONGO_LISTINGS_DB
-    ports:
-      - 7000:7000
-    logging:
-      options:
-        max-size: "4m"
-        max-file: "10"
-    depends_on:
-      - listings_data
-    restart: unless-stopped
+  # gallery_service:
+  #   container_name: gallery_service
+  #   build: ./services/gallery/api
+  #   env_file: ./services/gallery/api/.env
+  #   volumes:
+  #     - /usr/src/app/node_modules
+  #     - ./services/users/api:/usr/src/app
+  #   environment:
+  #     - MONGO_HOSTNAME=gallery_data
+  #     - MONGO_USERNAME=$MONGO_USERNAME
+  #     - MONGO_PASSWORD=$MONGO_PASSWORD
+  #     - MONGO_DB=$MONGO_GALLERY_DB
+  #   ports:
+  #     - 7000:7000
+  #   logging:
+  #     options:
+  #       max-size: "4m"
+  #       max-file: "10"
+  #   depends_on:
+  #     - gallery_data
+  #   restart: unless-stopped
 
   # ==========================================#
-  # services/listings/db                      #
+  # services/gallery/db                       #
   # ==========================================#
 
-  listings_data:
-    container_name: listings_data
-    image: mongo:latest
-    volumes:
-      - users_db_vol:/data/db
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
-      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
-    ports:
-      - 27107:27107
-    restart: unless-stopped
+  # gallery_data:
+  #   container_name: gallery_data
+  #   image: mongo
+  #   env_file: ./services/gallery/api/.env
+  #   environment:
+  #     - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
+  #     - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
+  #   volumes:
+  #     - gallery_db_vol:/data/db
+  #   ports:
+  #     - 27107:27107
+  #   restart: unless-stopped
 
   # ==========================================#
   # subscribers/rabbitmq                      #
   # ==========================================#
 
-  rabbitmq:
-    container_name: rabbitmq
-    image: rabbitmq:3-management-alpine
-    volumes:
-      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
-      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
-      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
-    environment:
-      RABBITMQ_ERLANG_COOKIE: ${RABBITMQ_ERLANG_COOKIE}
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
-    ports:
-      - 5672:5672
-      - 15672:15672
+  # rabbitmq:
+  #   container_name: rabbitmq
+  #   image: rabbitmq:3-management-alpine
+  #   ports:
+  #     - 5672:5672
+  #     - 15672:15672
+  #   env_file: ./subscribers/rabbitmq/.env
+  #   environment:
+  #     RABBITMQ_ERLANG_COOKIE: ${RABBITMQ_ERLANG_COOKIE}
+  #     RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+  #     RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+  #   volumes:
+  #     - ./subscribers/rabbitmq/etc/:/etc/rabbitmq/
+  #     - ./subscribers/rabbitmq/data/:/var/lib/rabbitmq/
+  #     - ./subscribers/rabbitmq/logs/:/var/log/rabbitmq/
       
   # ==========================================#
   #  services/mongo_express                   #
   # ==========================================#
 
-  mongo_express:
-    image: mongo-express
-    container_name: mongo_express
-    ports:
-      - 8081:8081
-    volumes:
-      - ./.docker/mongo-express/docker-entrypoint.sh:/docker-entrypoint.sh
-    env_file:
-      - .env
-    environment:
-      ME_CONFIG_MONGODB_SERVER: mongodb
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
-      ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
-    depends_on:
-      - auth_service
-      - users_service
-      - listings_service
+  # mongo_express:
+  #   image: mongo-express
+  #   container_name: mongo_express
+  #   ports:
+  #     - "8081:8081"
+  #   volumes:
+  #     - ./.docker/mongo-express/docker-entrypoint.sh:/docker-entrypoint.sh
+  #   env_file: ./services/users/api/.env
+  #   environment:
+  #     ME_CONFIG_MONGODB_SERVER: mongodb
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+  #     ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
+  #     ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
+    # depends_on:
+      # - auth_service
+      # - users_service
+      # - gallery_service
 
   # ==========================================#
   #  services/grafana                         #
@@ -305,3 +283,25 @@ services:
     environment:
       - VIRTUAL_HOST=dev.seesee.space
       - LETSENCRYPT_HOST=dev.seesee.space
+
+  # ==========================================#
+  #  global volumes                           #
+  # ==========================================#
+
+volumes:
+  nginx_conf:
+  nginx_vhost:
+  nginx_html:
+  nginx_certs:
+  # auth_db_vol:
+  # users_db_vol:
+  # gallery_db_vol:
+  
+  # ==========================================#
+  #  global networks                          #
+  # ==========================================#
+  
+networks:
+  default:
+    external:
+      name: services_network
