--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,10 +10,10 @@
       "problemMatcher": [],
     },
     {
-      "label": "docker purge system",
+      "label": "docker clean system",
       "type": "shell",
       "detail": "cleans system",
-      "command": "source ${workspaceFolder}/utilities/docker/purge.sh",
+      "command": "source ${workspaceFolder}/utilities/docker/clean.sh",
       "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
     },
@@ -29,12 +29,12 @@
       "label": "docker lift all containers",
       "type": "shell",
       "detail": "lift all containers",
-      "command": "source ${workspaceFolder}/utilities/docker/lift.sh",
+      "command": "source ${workspaceFolder}/utilities/docker/lift_up.sh",
       "presentation": { "echo": true, "panel": "shared", "showReuseMessage": true, "clear": false, "reveal": "always", "focus": true },
       "problemMatcher": [],
     },
     {
-      "label": "docker push to dockerhub",
+      "label": "docker push to docker hub",
       "type": "shell",
       "detail": "docker push to dockerhub",
       "command": "source ${workspaceFolder}/utilities/docker/push.sh",
