--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-  "favorites.storageFilePath": "../../working/.favorites.json"
+  "favorites.storageFilePath": "../../working/.favorites.json",
+  "sync-rsync.sites": [
+    {
+      "name": "seesee-testing",
+      "deleteFiles": false,
+      "upOnly": true,
+      "localPath": "/home/dany/projects/github/seesee/",
+      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/testing",
+      "exclude": ["**/node_modules", "**/build", ".git", ".vscode"],
+    },
+    {
+      "name": "seesee-production",
+      "deleteFiles": false,
+      "upOnly": true,
+      "localPath": "/home/dany/projects/github/seesee/",
+      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
+      "exclude": ["**/node_modules", "**/build", ".git", ".vscode"],
+    },
+  ],
 }
