--- a/gateway/client/Dockerfile
+++ b/gateway/client/Dockerfile
@@ -17,11 +17,11 @@ FROM node:alpine
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
-COPY package.json /usr/src/app/package.json
-RUN npm install --silent
-RUN npm install react-scripts -g --silent
+COPY package.json .
+RUN npm install
+# RUN npm install react-scripts -g --silent
 COPY . /usr/src/app
-RUN npm run build
+# RUN npm run build
 CMD ["npm", "run", "start"]
 
 # production environment
