--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.production
+.enx
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
