--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "favorites.storageFilePath": "../../working/.favorites.json",
+  "codedeploy.region": "us-east-1",
+  "codedeploy.applicationName": "seesee",
+  "codedeploy.isApplicationWorkspace": true,
   "sync-rsync.sites": [
     {
       "name": "seesee",
@@ -9,13 +11,6 @@
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
       "exclude": ["**/node_modules", "**/build", ".git", ".vscode"],
     },
-    {
-      "name": "testing",
-      "deleteFiles": false,
-      "upOnly": true,
-      "localPath": "/home/dany/projects/github/seesee/",
-      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/testing",
-      "exclude": ["**/node_modules", "**/build", ".git", ".vscode"],
-                    },
   ],
+  "favorites.storageFilePath": "../../working/.favorites.json",
 }
