--- a/services/listings-service/.gitignore
+++ b/services/listings-service/.gitignore
@@ -69,8 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.production
+*.enx
+.env.*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
