--- a/services/users-service/.gitignore
+++ b/services/users-service/.gitignore
@@ -70,7 +70,7 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.production
+.env.*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
