--- a/services/listings-service/.gitignore
+++ b/services/listings-service/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-*.enx
+.env
 .env.*
 
 # parcel-bundler cache (https://parceljs.org/)
