--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 services:
 
   # ==========================================#
@@ -14,10 +14,10 @@ services:
       - nginx_html:/usr/share/nginx/html
       - nginx_certs:/etc/nginx/certs:ro
     ports:
-      - "80:80"
-      # - "443:443"
+      - '80:80'
+      # - '443:443'
     labels:
-      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
+      - 'com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy'
     restart: always
     # links: # Link services to access http://app and  http://api inside the container
     #   - web_client:web_client
@@ -40,7 +40,7 @@ services:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     command: -notify-sighup nginx_proxy -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     labels:
-      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.docker_gen"
+      - 'com.github.jrcs.letsencrypt_nginx_proxy_companion.docker_gen'
     restart: always
 
   # ==========================================#
@@ -68,9 +68,9 @@ services:
     container_name: web_client
     build: ./gateway/client
     expose:
-      - "3000"
+      - '3000'
     # ports:
-    #   - "3000:3000"
+    #   - '3000:3000'
     environment:
       # - NGINX_HOST=see.localhost
       # - NGINX_PORT=3000
@@ -149,8 +149,8 @@ services:
   #     - 7000:7000
   #   logging:
   #     options:
-  #       max-size: "4m"
-  #       max-file: "10"
+  #       max-size: '4m'
+  #       max-file: '10'
   #   depends_on:
   #     - users_data
   #   restart: unless-stopped
@@ -171,7 +171,7 @@ services:
     #   - users_db_vol:/data/db
     #   # - ./services/users/api:/usr/src/app
     # restart: unless-stopped
-    # # command: ["-f", "/etc/mongod.conf"]
+    # # command: ['-f', '/etc/mongod.conf']
 
   # ==========================================#
   #  services/gallery/api                     #
@@ -193,8 +193,8 @@ services:
   #     - 7000:7000
   #   logging:
   #     options:
-  #       max-size: "4m"
-  #       max-file: "10"
+  #       max-size: '4m'
+  #       max-file: '10'
   #   depends_on:
   #     - gallery_data
   #   restart: unless-stopped
@@ -244,7 +244,7 @@ services:
   #   image: mongo-express
   #   container_name: mongo_express
   #   ports:
-  #     - "8081:8081"
+  #     - '8081:8081'
   #   volumes:
   #     - ./.docker/mongo-express/docker-entrypoint.sh:/docker-entrypoint.sh
   #   env_file: ./services/users/api/.env
@@ -267,7 +267,7 @@ services:
   #   container_name: grafana
   #   image: grafana/grafana
   #   expose:
-  #     - "3000"
+  #     - '3000'
   #   environment:
   #     - VIRTUAL_PORT=3000
   #     - VIRTUAL_HOST=graf.localhost
@@ -283,9 +283,9 @@ services:
   #   container_name: proxy_tunnel
   #   image: danydodson/seesee_proxy_tunnel
   #   ports:
-  #     - "2222:22"
+  #     - '2222:22'
   #   expose:
-  #     - "2222"
+  #     - '2222'
   #   environment:
   #     - VIRTUAL_HOST=dev.seesee.space
   #     - LETSENCRYPT_HOST=dev.seesee.space
