--- a/services/listings/.sequelizerc
+++ b/services/listings/.sequelizerc
@@ -1,6 +1,6 @@
-const path = require("path")
+const path = require('path')
 
 module.exports = {
-  config: path.resolve(__dirname, "./sequelize/config.js"),
-  "migrations-path": path.resolve(__dirname, "./sequelize/migrations")
+  config: path.resolve(__dirname, './sequelize/config.js'),
+  'migrations-path': path.resolve(__dirname, './sequelize/migrations')
 }
