--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
       "upOnly": true,
       "localPath": "/home/dany/projects/github/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
-      "exclude": ["**/node_modules", "**/build", ".git", ".vscode"],
+      "exclude": ["**/node_modules", "**/build", "**/dist", ".git", ".vscode"],
     },
   ],
   "favorites.storageFilePath": "../../working/.favorites.json",
