--- a/services/users/package.json
+++ b/services/users/package.json
@@ -34,6 +34,9 @@
     "webpack-cli": "~3.3.10",
     "webpack-node-externals": "~1.7.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-plugin-import": "~2.20.2",
+    "eslint-import-resolver-babel-module": "~5.1.2"
+  },
   "license": "MIT"
 }
