--- a/platforms/gallery-pwa/package.json
+++ b/platforms/gallery-pwa/package.json
@@ -11,20 +11,20 @@
     "watch": "parcel --port=7001 src/index.html"
   },
   "dependencies": {
-    "@types/react": "~16.9.35",
-    "apollo-cache-inmemory": "~1.6.6",
-    "apollo-client": "~2.6.10",
-    "apollo-link-http": "~1.5.17",
+    "@types/react": "^16.8.0",
+    "apollo-cache-inmemory": "~1.6.5",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "~1.5.16",
     "graphql": "^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
-    "graphql-tag": "~2.10.3",
-    "react": "~16.13.1",
-    "react-apollo": "~3.1.5",
-    "react-dom": "~16.13.1",
-    "react-hook-form": "~5.7.2",
-    "react-redux": "~7.2.0",
+    "graphql-tag": "~2.10.1",
+    "react": "^16.8.0",
+    "react-apollo": "~3.1.3",
+    "react-dom": ">= 16.3.0",
+    "react-hook-form": "~3.29.4",
+    "react-redux": "~7.1.3",
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
-    "styled-components": "~5.1.0",
-    "yup": "~0.28.5"
+    "styled-components": "~4.4.1",
+    "yup": "~0.28.0"
   },
   "devDependencies": {
     "parcel-bundler": "~1.12.4"
