--- a/platforms/gallery-pwa/package.json
+++ b/platforms/gallery-pwa/package.json
@@ -6,7 +6,7 @@
   "description": "platforms-gallery-pwa",
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production parcel build src/index.html",
-    "pre:deploy": "yarn build",
+    "predeploy": "yarn build",
     "deploy": "./deploy.sh",
     "watch": "parcel --port=7001 src/index.html"
   },
